--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "http-server": "^0.6.1"
     },
     "scripts": {
-      "start": "http-server -a localhost -p 8000 -c-1"
+      "start": "http-server -p 8000 -c-1"
     },
     "dependencies": {}
 }
