--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "owl.carousel": "2.0.0-beta.3",
     "jquery-slimscroll": "1.3.7",
     "chosen": "1.5.1",
-    "jquery-mask-plugin": "1.13.4"
+    "jquery-mask-plugin": "1.13.4",
+    "angular-loading-bar": "0.8.0"
   }
 }
